Collector manager approach, initial POC version
Signed-off-by: Martin Gaievski <gaievski@amazon.com>