@@ -46,8 +46,10 @@ public class HybridQueryIT extends BaseNeuralSearchIT {
     private static final String TEST_MULTI_DOC_INDEX_NAME_ONE_SHARD = "test-neural-multi-doc-single-shard-index";
     private static final String TEST_MULTI_DOC_INDEX_WITH_NESTED_TYPE_NAME_ONE_SHARD =
         "test-neural-multi-doc-nested-type--single-shard-index";
-    private static final String TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT =
-            "test-neural-multi-doc-text-and-int-index";
+    private static final String TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_SINGLE_SHARD =
+        "test-neural-multi-doc-text-and-int-index-single-shard";
+    private static final String TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_MULTIPLE_SHARDS =
+        "test-neural-multi-doc-text-and-int-index-multiple-shards";
     private static final String TEST_QUERY_TEXT = "greetings";
     private static final String TEST_QUERY_TEXT2 = "salute";
     private static final String TEST_QUERY_TEXT3 = "hello";
@@ -56,6 +58,7 @@ public class HybridQueryIT extends BaseNeuralSearchIT {
     private static final String TEST_DOC_TEXT1 = "Hello world";
     private static final String TEST_DOC_TEXT2 = "Hi to this place";
     private static final String TEST_DOC_TEXT3 = "We would like to welcome everyone";
+    private static final String TEST_DOC_TEXT4 = "Hello, I'm glad to you see you pal";
     private static final String TEST_KNN_VECTOR_FIELD_NAME_1 = "test-knn-vector-1";
     private static final String TEST_KNN_VECTOR_FIELD_NAME_2 = "test-knn-vector-2";
     private static final String TEST_TEXT_FIELD_NAME_1 = "test-text-field-1";
@@ -67,9 +70,12 @@ public class HybridQueryIT extends BaseNeuralSearchIT {
     private static final String INTEGER_FIELD_1 = "doc_index";
     private static final int INTEGER_FIELD_1_VALUE = 1234;
     private static final int INTEGER_FIELD_2_VALUE = 2345;
+    private static final int INTEGER_FIELD_3_VALUE = 3456;
     private final float[] testVector1 = createRandomVector(TEST_DIMENSION);
     private final float[] testVector2 = createRandomVector(TEST_DIMENSION);
     private final float[] testVector3 = createRandomVector(TEST_DIMENSION);
+    private static final String MAX_AGGREGATION_NAME = "max_aggs";
+    private static final String AVG_AGGREGATION_NAME = "avg_field";
     private static final String SEARCH_PIPELINE = "phase-results-pipeline";
 
     @Before
@@ -414,8 +420,8 @@ public class HybridQueryIT extends BaseNeuralSearchIT {
      * }
      */
     @SneakyThrows
-    public void testAggregations_whenMetricAggregationsInQuery_thenSuccessful() {
-        initializeIndexIfNotExist(TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT);
+    public void testAggregationsSingleShard_whenMetricAggregationsInQuery_thenSuccessful() {
+        initializeIndexIfNotExist(TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_SINGLE_SHARD);
 
         TermQueryBuilder termQueryBuilder1 = QueryBuilders.termQuery(TEST_TEXT_FIELD_NAME_1, TEST_QUERY_TEXT3);
         TermQueryBuilder termQueryBuilder2 = QueryBuilders.termQuery(TEST_TEXT_FIELD_NAME_1, TEST_QUERY_TEXT5);
@@ -424,15 +430,14 @@ public class HybridQueryIT extends BaseNeuralSearchIT {
         hybridQueryBuilderNeuralThenTerm.add(termQueryBuilder1);
         hybridQueryBuilderNeuralThenTerm.add(termQueryBuilder2);
 
-        AggregationBuilder aggsBuilder = AggregationBuilders.max("max_aggs").field(INTEGER_FIELD_1);
-        //AggregationBuilder aggsBuilder = null;
+        AggregationBuilder aggsBuilder = AggregationBuilders.max(MAX_AGGREGATION_NAME).field(INTEGER_FIELD_1);
         Map<String, Object> searchResponseAsMap1 = search(
-                TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT,
-                hybridQueryBuilderNeuralThenTerm,
-                null,
-                10,
-                Map.of("search_pipeline", SEARCH_PIPELINE),
-                aggsBuilder
+            TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_SINGLE_SHARD,
+            hybridQueryBuilderNeuralThenTerm,
+            null,
+            10,
+            Map.of("search_pipeline", SEARCH_PIPELINE),
+            aggsBuilder
         );
 
         assertEquals(1, getHitCount(searchResponseAsMap1));
@@ -455,6 +460,61 @@ public class HybridQueryIT extends BaseNeuralSearchIT {
         assertEquals(1, total.get("value"));
         assertNotNull(total.get("relation"));
         assertEquals(RELATION_EQUAL_TO, total.get("relation"));
+
+        Map<String, Object> aggregations = getAggregations(searchResponseAsMap1);
+        assertNotNull(aggregations);
+        assertTrue(aggregations.containsKey(MAX_AGGREGATION_NAME));
+        double maxAggsValue = getAggregationValue(aggregations, MAX_AGGREGATION_NAME);
+        assertTrue(maxAggsValue >= 0);
+    }
+
+    @SneakyThrows
+    public void testAggregationsMultipleShards_whenMetricAggregationsInQuery_thenSuccessful() {
+        initializeIndexIfNotExist(TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_MULTIPLE_SHARDS);
+
+        TermQueryBuilder termQueryBuilder1 = QueryBuilders.termQuery(TEST_TEXT_FIELD_NAME_1, TEST_QUERY_TEXT3);
+        TermQueryBuilder termQueryBuilder2 = QueryBuilders.termQuery(TEST_TEXT_FIELD_NAME_1, TEST_QUERY_TEXT5);
+
+        HybridQueryBuilder hybridQueryBuilderNeuralThenTerm = new HybridQueryBuilder();
+        hybridQueryBuilderNeuralThenTerm.add(termQueryBuilder1);
+        hybridQueryBuilderNeuralThenTerm.add(termQueryBuilder2);
+
+        AggregationBuilder aggsBuilder = AggregationBuilders.avg(AVG_AGGREGATION_NAME).field(INTEGER_FIELD_1);
+        Map<String, Object> searchResponseAsMap1 = search(
+            TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_MULTIPLE_SHARDS,
+            hybridQueryBuilderNeuralThenTerm,
+            null,
+            10,
+            Map.of("search_pipeline", SEARCH_PIPELINE),
+            aggsBuilder
+        );
+
+        assertEquals(2, getHitCount(searchResponseAsMap1));
+
+        List<Map<String, Object>> hits1NestedList = getNestedHits(searchResponseAsMap1);
+        List<String> ids = new ArrayList<>();
+        List<Double> scores = new ArrayList<>();
+        for (Map<String, Object> oneHit : hits1NestedList) {
+            ids.add((String) oneHit.get("_id"));
+            scores.add((Double) oneHit.get("_score"));
+        }
+
+        // verify that scores are in desc order
+        assertTrue(IntStream.range(0, scores.size() - 1).noneMatch(idx -> scores.get(idx) < scores.get(idx + 1)));
+        // verify that all ids are unique
+        assertEquals(Set.copyOf(ids).size(), ids.size());
+
+        Map<String, Object> total = getTotalHits(searchResponseAsMap1);
+        assertNotNull(total.get("value"));
+        assertEquals(2, total.get("value"));
+        assertNotNull(total.get("relation"));
+        assertEquals(RELATION_EQUAL_TO, total.get("relation"));
+
+        Map<String, Object> aggregations = getAggregations(searchResponseAsMap1);
+        assertNotNull(aggregations);
+        assertTrue(aggregations.containsKey(AVG_AGGREGATION_NAME));
+        double maxAggsValue = getAggregationValue(aggregations, AVG_AGGREGATION_NAME);
+        assertEquals(maxAggsValue, 2345.0, DELTA_FOR_SCORE_ASSERTION);
     }
 
     @SneakyThrows
@@ -549,43 +609,91 @@ public class HybridQueryIT extends BaseNeuralSearchIT {
             );
         }
 
-        if (TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT.equals(indexName)
-                && !indexExists(TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT)) {
-            createIndexWithConfiguration(
-                    indexName,
-                    buildIndexConfiguration(
-                            List.of(),
-                            List.of(),
-                            List.of(INTEGER_FIELD_1),
-                            1
-                    ),
-                    ""
+        if (TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_SINGLE_SHARD.equals(indexName)
+            && !indexExists(TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_SINGLE_SHARD)) {
+            createIndexWithConfiguration(indexName, buildIndexConfiguration(List.of(), List.of(), List.of(INTEGER_FIELD_1), 1), "");
+
+            addKnnDoc(
+                TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_SINGLE_SHARD,
+                "1",
+                List.of(),
+                List.of(),
+                Collections.singletonList(TEST_TEXT_FIELD_NAME_1),
+                Collections.singletonList(TEST_DOC_TEXT1),
+                List.of(),
+                List.of(),
+                List.of(INTEGER_FIELD_1),
+                List.of(INTEGER_FIELD_1_VALUE)
             );
 
             addKnnDoc(
-                    TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT,
-                    "1",
-                    List.of(),
-                    List.of(),
-                    Collections.singletonList(TEST_TEXT_FIELD_NAME_1),
-                    Collections.singletonList(TEST_DOC_TEXT1),
-                    List.of(),
-                    List.of(),
-                    List.of(INTEGER_FIELD_1),
-                    List.of(INTEGER_FIELD_1_VALUE)
+                TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_SINGLE_SHARD,
+                "2",
+                List.of(),
+                List.of(),
+                Collections.singletonList(TEST_TEXT_FIELD_NAME_1),
+                Collections.singletonList(TEST_DOC_TEXT3),
+                List.of(),
+                List.of(),
+                List.of(INTEGER_FIELD_1),
+                List.of(INTEGER_FIELD_2_VALUE)
+            );
+        }
+
+        if (TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_MULTIPLE_SHARDS.equals(indexName)
+            && !indexExists(TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_MULTIPLE_SHARDS)) {
+            createIndexWithConfiguration(indexName, buildIndexConfiguration(List.of(), List.of(), List.of(INTEGER_FIELD_1), 3), "");
+
+            addKnnDoc(
+                TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_MULTIPLE_SHARDS,
+                "1",
+                List.of(),
+                List.of(),
+                Collections.singletonList(TEST_TEXT_FIELD_NAME_1),
+                Collections.singletonList(TEST_DOC_TEXT1),
+                List.of(),
+                List.of(),
+                List.of(INTEGER_FIELD_1),
+                List.of(INTEGER_FIELD_1_VALUE)
             );
 
             addKnnDoc(
-                    TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT,
-                    "2",
-                    List.of(),
-                    List.of(),
-                    Collections.singletonList(TEST_TEXT_FIELD_NAME_1),
-                    Collections.singletonList(TEST_DOC_TEXT3),
-                    List.of(),
-                    List.of(),
-                    List.of(INTEGER_FIELD_1),
-                    List.of(INTEGER_FIELD_2_VALUE)
+                TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_MULTIPLE_SHARDS,
+                "2",
+                List.of(),
+                List.of(),
+                Collections.singletonList(TEST_TEXT_FIELD_NAME_1),
+                Collections.singletonList(TEST_DOC_TEXT3),
+                List.of(),
+                List.of(),
+                List.of(INTEGER_FIELD_1),
+                List.of(INTEGER_FIELD_2_VALUE)
+            );
+
+            addKnnDoc(
+                TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_MULTIPLE_SHARDS,
+                "3",
+                List.of(),
+                List.of(),
+                Collections.singletonList(TEST_TEXT_FIELD_NAME_1),
+                Collections.singletonList(TEST_DOC_TEXT2),
+                List.of(),
+                List.of(),
+                List.of(),
+                List.of()
+            );
+
+            addKnnDoc(
+                TEST_MULTI_DOC_INDEX_WITH_TEXT_AND_INT_MULTIPLE_SHARDS,
+                "4",
+                List.of(),
+                List.of(),
+                Collections.singletonList(TEST_TEXT_FIELD_NAME_1),
+                Collections.singletonList(TEST_DOC_TEXT4),
+                List.of(),
+                List.of(),
+                List.of(INTEGER_FIELD_1),
+                List.of(INTEGER_FIELD_3_VALUE)
             );
         }
     }
@@ -629,5 +737,15 @@ public class HybridQueryIT extends BaseNeuralSearchIT {
     private Optional<Float> getMaxScore(Map<String, Object> searchResponseAsMap) {
         Map<String, Object> hitsMap = (Map<String, Object>) searchResponseAsMap.get("hits");
         return hitsMap.get("max_score") == null ? Optional.empty() : Optional.of(((Double) hitsMap.get("max_score")).floatValue());
+    }
+
+    private Map<String, Object> getAggregations(final Map<String, Object> searchResponseAsMap) {
+        Map<String, Object> aggsMap = (Map<String, Object>) searchResponseAsMap.get("aggregations");
+        return aggsMap;
+    }
+
+    private <T> T getAggregationValue(final Map<String, Object> aggsMap, final String aggName) {
+        Map<String, Object> aggValues = (Map<String, Object>) aggsMap.get(aggName);
+        return (T) aggValues.get("value");
     }
 }
